crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters/rest-binaryQuantized-task_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batchUid]",
  "indexUid": "test",
  "status": "succeeded",
  "type": "settingsUpdate",
  "canceledBy": null,
  "details": {
    "embedders": {
      "test": {
        "source": "rest",
        "dimensions": 768,
        "binaryQuantized": false,
        "url": "http://rest.example/",
        "request": {
          "text": "{{text}}"
        },
        "response": {
          "embedding": "{{embedding}}"
        }
      }
    }
  },
  "error": null,
  "duration": "[duration]",
  "enqueuedAt": "[enqueuedAt]",
  "startedAt": "[startedAt]",
  "finishedAt": "[finishedAt]"
}
