crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters/rest-pooling-sending_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `pooling` unavailable for source `rest`.\n  - note: `pooling` is available for sources: `huggingFace`\n  - note: available fields for source `rest`: `source`, `apiKey`, `dimensions`, `documentTemplate`, `documentTemplateMaxBytes`, `url`, `request`, `response`, `headers`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://www.meilisearch.com/docs/reference/errors/error_codes#invalid-settings-embedders"
}
