crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters/rest-revision-sending_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `revision` unavailable for source `rest`.\n  - note: `revision` is available for sources: `huggingFace`\n  - note: available fields for source `rest`: `source`, `apiKey`, `dimensions`, `documentTemplate`, `documentTemplateMaxBytes`, `url`, `request`, `response`, `headers`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.meilisearch.com/errors#invalid-settings-embedders"
}
