crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters/userProvided-apiKey-sending_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `apiKey` unavailable for source `userProvided`.\n  - note: `apiKey` is available for sources: `openAi`, `ollama`, `rest`\n  - note: available fields for source `userProvided`: `source`, `dimensions`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://www.meilisearch.com/docs/reference/errors/error_codes#invalid-settings-embedders"
}
